[gd_scene load_steps=20 format=3 uid="uid://b85oycvx061u2"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_jed3g"]
[ext_resource type="LabelSettings" uid="uid://cx50yfbdnme4d" path="res://assets/fonts/label_settings.tres" id="1_sqe0k"]
[ext_resource type="FontFile" uid="uid://wdjka75qe0dk" path="res://assets/fonts/SpicyRice-Regular.ttf" id="3_jlell"]
[ext_resource type="LabelSettings" uid="uid://ddxax171qe5yl" path="res://assets/fonts/label_settings_small.tres" id="3_ltn62"]
[ext_resource type="Texture2D" uid="uid://lunagyclxw60" path="res://assets/ux/keyboard_z.png" id="4_e73ji"]
[ext_resource type="Texture2D" uid="uid://dhjtpjef6sddm" path="res://assets/ux/keyboard_arrow_up.png" id="5_ipoyj"]
[ext_resource type="Texture2D" uid="uid://dqbxnid3gopqq" path="res://assets/ux/keyboard_q.png" id="6_7mosd"]
[ext_resource type="Texture2D" uid="uid://gw878fbfuqbx" path="res://assets/ux/keyboard_arrow_left.png" id="7_eqb2a"]
[ext_resource type="Texture2D" uid="uid://bh1v5ks4s5mrp" path="res://assets/ux/keyboard_s.png" id="8_irdp3"]
[ext_resource type="Texture2D" uid="uid://cqx3fkcwhr3ti" path="res://assets/ux/keyboard_arrow_down.png" id="9_3asdy"]
[ext_resource type="Texture2D" uid="uid://brvrnxiht063j" path="res://assets/ux/keyboard_d.png" id="10_rro4x"]
[ext_resource type="Texture2D" uid="uid://brq7qivaytl11" path="res://assets/ux/keyboard_arrow_right.png" id="11_6p4a6"]
[ext_resource type="Texture2D" uid="uid://ijtkux1bi1pe" path="res://assets/ux/keyboard_l.png" id="12_jn3m5"]
[ext_resource type="Texture2D" uid="uid://bvk7yhr30i50d" path="res://assets/ux/keyboard_r.png" id="13_1xlo2"]

[sub_resource type="Gradient" id="Gradient_3s4sx"]
offsets = PackedFloat32Array(0.776256, 0.890411, 1)
colors = PackedColorArray(0.960784, 0.72549, 0.443137, 1, 0.960784, 0.576471, 0.443137, 1, 0.443137, 0.517647, 0.960784, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yg7k3"]
gradient = SubResource("Gradient_3s4sx")
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dydo0"]
bg_color = Color(0.843137, 0.305882, 0.309804, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.117241, 0.465332, 0.609044, 1)
shadow_size = 1
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fercx"]
bg_color = Color(0.999965, 0.53737, 0.507192, 1)
shadow_color = Color(0.117241, 0.465332, 0.609044, 1)

[sub_resource type="Theme" id="Theme_ol5ed"]
Button/colors/font_color = Color(0.856067, 0.856067, 0.856067, 1)
Button/font_sizes/font_size = 24
Button/fonts/font = ExtResource("3_jlell")
Button/styles/normal = SubResource("StyleBoxFlat_dydo0")
Button/styles/pressed = SubResource("StyleBoxFlat_fercx")

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jed3g")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 1080.0
offset_bottom = 720.0
texture = SubResource("GradientTexture2D_yg7k3")

[node name="Score" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 167.0
offset_bottom = 118.0

[node name="ScoreTitle" type="Label" parent="Score"]
layout_mode = 2
text = "Score"
label_settings = ExtResource("1_sqe0k")

[node name="HSplitContainer" type="HSplitContainer" parent="Score"]
layout_mode = 2
split_offset = 200

[node name="ScoreValue" type="Label" parent="Score/HSplitContainer"]
layout_mode = 2
text = "0
"
label_settings = ExtResource("3_ltn62")
horizontal_alignment = 2

[node name="ScoreUnit" type="Label" parent="Score/HSplitContainer"]
layout_mode = 2
text = "G"
label_settings = ExtResource("3_ltn62")

[node name="Bombs" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 136.0
offset_right = 173.0
offset_bottom = 185.0

[node name="BombsTitle" type="Label" parent="Bombs"]
layout_mode = 2
text = "Bombs"
label_settings = ExtResource("1_sqe0k")

[node name="BombsIcons" type="GridContainer" parent="Bombs"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Bombs/BombsIcons"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 666.0
offset_right = 180.0
offset_bottom = 703.0
theme = SubResource("Theme_ol5ed")
button_mask = 5
text = "Restart"
autowrap_mode = 3

[node name="Gamezone" type="ReferenceRect" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 40.0
offset_right = 840.0
offset_bottom = 680.0

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 856.0
offset_top = 40.0
offset_right = 1074.0
offset_bottom = 425.0

[node name="ControlsTitle" type="Label" parent="Controls"]
layout_mode = 2
text = "Controls"
label_settings = ExtResource("1_sqe0k")

[node name="ControlsList" type="GridContainer" parent="Controls"]
layout_mode = 2
columns = 4

[node name="ZKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("4_e73ji")

[node name="Separator" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "/"
label_settings = ExtResource("3_ltn62")

[node name="UpKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("5_ipoyj")

[node name="UpLabel" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "Up"
label_settings = ExtResource("3_ltn62")

[node name="QKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("6_7mosd")

[node name="Separator2" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "/"
label_settings = ExtResource("3_ltn62")

[node name="LeftKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("7_eqb2a")

[node name="LeftLabel" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "Left"
label_settings = ExtResource("3_ltn62")

[node name="SKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("8_irdp3")

[node name="Separator3" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "/"
label_settings = ExtResource("3_ltn62")

[node name="DownKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("9_3asdy")

[node name="DownLabel" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "Down"
label_settings = ExtResource("3_ltn62")

[node name="DKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("10_rro4x")

[node name="Separator4" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "/"
label_settings = ExtResource("3_ltn62")

[node name="RightKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("11_6p4a6")

[node name="RightLabel" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "Right"
label_settings = ExtResource("3_ltn62")

[node name="LKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("12_jn3m5")

[node name="Separator5" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "/"
label_settings = ExtResource("3_ltn62")

[node name="RKey" type="TextureRect" parent="Controls/ControlsList"]
layout_mode = 2
texture = ExtResource("13_1xlo2")

[node name="RewardLabel" type="Label" parent="Controls/ControlsList"]
layout_mode = 2
text = "Reward"
label_settings = ExtResource("3_ltn62")

[node name="LayoutLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 856.0
offset_top = 425.0
offset_right = 1048.0
offset_bottom = 470.0
text = "Layout"
label_settings = ExtResource("1_sqe0k")

[node name="LayoutPref" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 488.0
offset_right = 1056.0
offset_bottom = 528.0
theme_override_fonts/font = ExtResource("3_jlell")
theme_override_font_sizes/font_size = 20
selected = 0
item_count = 2
popup/item_0/text = "AZERTY"
popup/item_1/text = "QWERTY"
popup/item_1/id = 1

[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="item_selected" from="LayoutPref" to="." method="_on_layout_pref_item_selected"]
